# onnxmlir-triton-backend

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: OnnxMlirBackendConfig.cmake.in
src/: libtriton_onnxmlir.ldscript  model_instance_state.cc  model_instance_state.h  model_state.cc  model_state.h  onnxmlir_backend.cc  onnxmlir_typemapping.cc  onnxmlir_utils.cc  onnxmlir_utils.h
